--- a/230310/page.css
+++ b/230310/page.css
@@ -9,6 +9,13 @@
 .main_logo {
     border: 1px solid white;
 }
+.brand_logo{
+    display: block;  
+    width: 15rem;
+    margin: 0 auto;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+}
 
 html {
     height: 100%;
@@ -23,11 +30,27 @@ body {
     align-items: center;
 }
 .login-container {
-    background-color: white;
+    align-items: center;
+    border: 1px solid rgb(219,219,219);
+    border-radius: 1px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font-size: 100%;
+    margin: 0px 30px 10px;
+    padding: 50px 0;
+    position: relative;
+    vertical-align: baseline;
     width: 350px;
-    height: 400px;
-    margin-left: 40px;
-    border: 1px solid lightgray;
+    height: 401px;
+}
+.login-bottom{
+    align-items: center;
+    width: 350px;
+    height: 100px;
+    border: 1px solid rgb(219,219,219);
+    position: relative;
 }
 .logo-text {
     font-family: "Lobster", cursive;
@@ -44,8 +67,10 @@ body {
 }
 .login-input {
     font-size: 14px;
-    width: 330px;
-    height: 40px;
+    font-stretch: 100%;
+    line-height: 18px;
+    width: 266px;
+    height: 36px;
     background-color: rgba(0, 0, 0, 0.035);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 5px;
