--- a/insta_clone/instagram/posts/templates/posts/create.html
+++ b/insta_clone/instagram/posts/templates/posts/create.html
@@ -6,7 +6,7 @@
     <form action="{% url 'posts:create' %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit">
+        <input type="submit" class="btn btn-primary" value="Submit">
     </form>
 
 {% endblock content %}
