--- a/insta_clone/instagram/posts/templates/posts/index.html
+++ b/insta_clone/instagram/posts/templates/posts/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>메인 화면</h1>
-
+<h1>This is Index</h1>
+<div>
+    {% include 'posts/post.html' %}
+</div>
 {% endblock content %}
 
